--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,17 @@
   --weight-b: 700;
 }
 
+*{
+   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 body{
-  padding: 0;
-  margin: 0;
-  flex-flow: var(--font-fam);
-  box-sizing: border-box;
+  padding: 0 !important;
+  margin: 0 !important;
+  box-sizing: border-box !important;
 }
 
 p{
@@ -86,15 +92,65 @@ p{
   z-index: 0;
 }
 
+.form-wrapper{
+  background-color: var(--very-dark-desat-blue);
+  border-radius: 8px;
+  padding: 16px;
+  margin-bottom: 40px;
+}
+
+.todo{
+  display: flex;
+  padding: 8px 32px;
+  border-radius: 8px;
+  background-color: var(--very-dark-desat-blue);
+  border-bottom: 1px solid var(--light-grayish-blue);
+}
+
+.checkbox-container{
+  display: block;
+  cursor: pointer;
+  align-items: center;
+  position: relative;
+  margin-right: 10px;
+}
+
+.checkbox-container input{
+   position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.custom-checkbox{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background-color: #eee;
+}
+
+.checkbox-container input:checked ~ .custom-checkbox {
+  background-color: #2196F3;
+}
+
+.todo p{
+  font-family: var(--font-fam);
+  font-weight: var(--weight-med);
+  color: var(--very-light-gray);
+  /* font-size: var(--body-copy-size);  */
+}
+
 .content{
   position: relative;
   z-index: 1;
-  padding: 16px;
-  background-color: var(--very-dark-desat-blue);
-  border-radius: 8px;
+  box-shadow: -1px 1px 20px -2px var(--dark-blue);
 }
 
-.content input{
+.form-wrapper input{
   width: 100%;
   height: 40px;
   padding: 4px 16px;
@@ -106,12 +162,4 @@ p{
   font-family: var(--font-fam);
   outline: transparent;
 } 
-
-
-
-
-
-
-
-
 
